# lumen

./: .gitignore  Cargo.toml  README.md  flake.nix  lumen.config.json  release.sh
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-22-0github-theme.md
integrations/: README.md  install.sh
integrations/codex/: README.md
integrations/codex/hooks/: hooks.json
integrations/pi/: README.md
integrations/pi/extension/: README.md  index.ts  package.json  tsconfig.json
src/: ai_prompt.rs  command.rs  commit_reference.rs  configuration.rs  error.rs  grouped_summary.rs  main.rs  qwen_oauth.rs  vcs.rs
src/command/: completion.rs  configure.rs  draft.rs  explain.rs  list.rs  mod.rs  operate.rs  outline.rs
src/command/diff/: annotation.rs  annotation_store.rs  app.rs  app_mode.rs  azure.rs  context.rs  coordinates.rs  diff_algo.rs  external.rs  git.rs  global_search.rs  keybindings.rs  mod.rs  outline.rs  pr_provider.rs  search.rs  state.rs  sticky_lines.rs  text_edit.rs  theme.rs  types.rs  viewed_state.rs  watcher.rs
src/command/diff/highlight/: config.rs  mod.rs  queries.rs
src/config/: cli.rs  configuration.rs  mod.rs  providers.rs
src/diff_ui/: context.rs  diff.rs  git.rs  highlight.rs  mod.rs  modal.rs  search.rs  sticky_lines.rs  theme.rs  types.rs  ui.rs  watcher.rs
src/git_entity/: commit.rs  diff.rs  git_commit.rs  git_diff.rs  mod.rs
src/provider/: claude.rs  deepseek.rs  groq.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  phind.rs
src/vcs/: backend.rs  detection.rs  git.rs  jj.rs  mod.rs  noop.rs  test_utils.rs
(+11 files in other folders)
